--- a/src/main/resources/templates/expense.html
+++ b/src/main/resources/templates/expense.html
@@ -108,7 +108,7 @@
             <div th:each="i:${list}" class="modDiv">
                 <div class="list card p:4 fl-dir:row ai:center w:10p pos:relative">
                     <div class="d:flex fl-dir:column ai:center gap:2" style="width: 12%; max-width: 90px">
-                        <div>04/21</div>
+                        <div th:text="${#dates.format(i['DD'], 'MM/dd')}">05/13</div>
                         <div class="fs:4">월</div>
                     </div>
                     <div class="fl-grow:1 d:flex fl-dir:column gap:4">
