Chore: 용어변경 고정비용 -> 고정지출

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,7 +21,7 @@
 
             <a href="/fixed">
                 <div class="card">
-                    <div class="title">미지출 고정비용</div>
+                    <div class="title">미지출 고정지출</div>
                     <div class="value">430,000원</div>
                     <div class="desc">지출 예정인 고정 비용</div>
                 </div>
@@ -86,7 +86,7 @@
             <div class="card">
                 <div class="title">예상 가용금액</div>
                 <div class="value">430,000원</div>
-                <div class="desc">예산 - 고정비용</div>
+                <div class="desc">예산 - 고정지출</div>
             </div>
             <div class="card">
                 <div class="title">차이</div>
