--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,19 +10,19 @@
 <body>
     <main layout:fragment="main">
         <section class="grid mt:8">
-            <h1>2024년 4월 21일</h1>
+            <h1 th:text="${#temporals.format(#temporals.createNow(), 'yy.MM.dd')}">2024년 4월 21일</h1>
             <a href="/expense">
                 <div class="card">
                     <div class="title">가용금액</div>
-                    <div class="value">430,000원</div>
+                    <div class="value" th:text="${#numbers.formatDecimal(availAmt, 0, 'COMMA', 0, 'POINT')} + '원'">430,000원</div>
                     <div class="desc">잔고 - (지출 예정 비용 + 카드대금)</div>
                 </div>
             </a>
 
             <a href="/fixed">
                 <div class="card">
-                    <div class="title">미지출 고정지출</div>
-                    <div class="value">430,000원</div>
+                    <div class="title">미결제 고정지출</div>
+                    <div class="value" th:text="${#numbers.formatDecimal(unpaidFixed, 0, 'COMMA', 0, 'POINT')} + '원'">430,000원</div>
                     <div class="desc">지출 예정인 고정 비용</div>
                 </div>
             </a>
@@ -30,16 +30,12 @@
             <a href="/card">
                 <div class="card">
                     <div class="title">미결제 카드대금</div>
-                    <div class="value">430,000원</div>
-                    <div class="desc">지난 달 + 이번 달 카드 대금 총합</div>
-                    <div>
+                    <div class="value" th:text="${#numbers.formatDecimal(cardPmt, 0, 'COMMA', 0, 'POINT')} + '원'">430,000원</div>
+                    <div class="desc">지난 달 + 이번 달 카드 대금</div>
+                    <div th:each="c : ${cardPmtList}">
                         <div class="desc d:flex jc:space-between bd-bottom bd-color:base-3 p:2">
-                            <span>현대 코웨이</span>
-                            <span>300,000원</span>
-                        </div>
-                        <div class="desc d:flex jc:space-between bd-bottom bd-color:base-3 p:2">
-                            <span>현대 네이버페이</span>
-                            <span>300,000원</span>
+                            <span th:text="${c['NAME']}">현대 코웨이</span>
+                            <span th:text="${#numbers.formatDecimal(c['total'], 0, 'COMMA', 0, 'POINT')} + '원'">300,000원</span>
                         </div>
                     </div>
                 </div>
@@ -48,7 +44,7 @@
             <a href="/account">
                 <div class="card">
                     <div class="title">통장 잔고</div>
-                    <div class="value">430,000원</div>
+                    <div class="value" th:text="${#numbers.formatDecimal(cash, 0, 'COMMA', 0, 'POINT')} + '원'">430,000원</div>
                     <div class="desc">모든 통장 잔고 총합</div>
                 </div>
             </a>
@@ -59,7 +55,7 @@
             <a href="/income">
                 <div class="card">
                     <div class="title">총 수입</div>
-                    <div class="value">430,000원</div>
+                    <div class="value" th:text="${#numbers.formatDecimal(incomeTotal, 0, 'COMMA', 0, 'POINT')} + '원'">430,000원</div>
                     <div class="desc">예산 + 그 외 수입</div>
                 </div>
             </a>
@@ -67,7 +63,7 @@
             <a href="/expense">
                 <div class="card">
                     <div class="title">총 지출</div>
-                    <div class="value">430,000원</div>
+                    <div class="value" th:text="${#numbers.formatDecimal(expenseTotal, 0, 'COMMA', 0, 'POINT')} + '원'">430,000원</div>
                     <div class="desc">고정 비용 + 이번 달 변동 지출</div>
                 </div>
             </a>
@@ -79,18 +75,18 @@
             <a href="/budget">
                 <div class="card">
                     <div class="title">예산</div>
-                    <div class="value">430,000원</div>
+                    <div class="value" th:text="${#numbers.formatDecimal(budgetTotal, 0, 'COMMA', 0, 'POINT')} + '원'">430,000원</div>
                     <div class="desc">예산 총합</div>
                 </div>
             </a>
             <div class="card">
                 <div class="title">예상 가용금액</div>
-                <div class="value">430,000원</div>
+                <div class="value" th:text="${#numbers.formatDecimal(expAvailAmt, 0, 'COMMA', 0, 'POINT')} + '원'">430,000원</div>
                 <div class="desc">예산 - 고정지출</div>
             </div>
             <div class="card">
                 <div class="title">차이</div>
-                <div class="value">430,000원</div>
+                <div class="value" th:text="${#numbers.formatDecimal(availAmt - expAvailAmt, 0, 'COMMA', 0, 'POINT')} + '원'">430,000원</div>
                 <div class="desc">가용금액 - 예상 가용금액</div>
             </div>
         </section>
