--- a/src/main/resources/static/css/inc/root.css
+++ b/src/main/resources/static/css/inc/root.css
@@ -15,7 +15,7 @@
 
   --color-accent-1: #F67676;
   --color-accent-2: #ff9205;
-  --color-accent-3: #feb900;
+  --color-accent-3: #f6deb1;
 
   --color-base-1: #FFFFFF;
   --color-base-2: #F5F5F5;
