--- a/src/main/resources/templates/income.html
+++ b/src/main/resources/templates/income.html
@@ -96,7 +96,7 @@
                         <div class="fs:4">월</div>
                     </div>
                     <div class="fl-grow:1 d:flex fl-dir:column gap:4">
-                        <div class=""><span class="p:1 pl:2 pr:2 bg-color:main-1 bd-radius:3 fs:3 color:base-7" th:text="${i['CTG']}">급여</span></div>
+                        <div class=""><span class="tag" th:text="${i['CTG']}">급여</span></div>
                         <div class="title fw:2" th:text="${i['NAME']}">월급</div>
                         <div class="desc fs:5" th:text="${i['METHOD']}">토스</div>
                     </div>
