--- a/src/main/resources/static/css/inc/root.css
+++ b/src/main/resources/static/css/inc/root.css
@@ -7,7 +7,7 @@
   --color-main-2: #E9A6B0;
   --color-main-3: #C86B85;
   --color-main-4: #554046;
-  --color-main-5: #aa6d77;
+  --color-main-5: #df9fa9;
 
   --color-sub-1: #f6a728;
   --color-sub-2: #a76e15;;
