--- a/src/main/resources/templates/expense.html
+++ b/src/main/resources/templates/expense.html
@@ -20,7 +20,7 @@
                 <div class="icon icon:caret-right icon-color:base-5">></div>
             </a>
         </div>
-        <div class="addBtn btn btn-size:1 bg-color:main-2 fs:7">지출추가</div>
+        <div class="addBtn btn btn-size:1 btn-color:main-2 fs:7">지출추가</div>
     </div>
     <div th:if="${param.error}" class="error-message" th:text="${param.error}">
         오류가 발생했습니다.
@@ -112,7 +112,7 @@
                         <div class="fs:4">월</div>
                     </div>
                     <div class="fl-grow:1 d:flex fl-dir:column gap:4">
-                        <div><span class="p:1 pl:2 pr:2 bg-color:main-1 bd-radius:3 fs:3 color:base-7" th:text="${i['CTG']}">데이트</span></div>
+                        <div><span class="tag" th:text="${i['CTG']}">데이트</span></div>
                         <div class="title fw:2" th:text="${i['NAME']}">명륜진사갈비</div>
                         <div class="desc fs:5" th:text="${i['METHOD']}">현대 코웨이</div>
                     </div>
