--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
 <body>
     <main layout:fragment="main">
         <section class="grid mt:8">
-            <h1 th:text="${#temporals.format(#temporals.createNow(), 'yyyy-MM-dd')}">2024년 4월 21일</h1>
+            <h1 th:text="${#temporals.format(#temporals.createNow(), 'yyyy.MM.dd')}">2024년 4월 21일</h1>
             <a href="/expense">
                 <div class="card">
                     <div class="title">가용금액</div>
