--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,6 +10,7 @@
 <body>
     <main layout:fragment="main">
         <section class="grid mt:8">
+            <div id="install" class="md:d:none btn btn-color:main-2 btn-size:2 w:10p" style="display: none"> 앱 설치하기 </div>
             <h1 th:text="${#temporals.format(#temporals.createNow(), 'yyyy.MM.dd')}">2024.04.21</h1>
             <a href="/expense">
                 <div class="card">
