Feat: 카테고리 스크롤 추가

--- a/src/main/resources/static/css/budget.css
+++ b/src/main/resources/static/css/budget.css
@@ -19,3 +19,10 @@
         font-size: var(--font-size-11);
     }
 }
+
+.ctg-btn {
+    display: flex;
+    gap: var(--gap-2);
+    overflow-x: auto;
+    scroll-behavior: smooth;
+}
