--- a/src/main/resources/static/css/inc/button.css
+++ b/src/main/resources/static/css/inc/button.css
@@ -9,6 +9,7 @@
     background-color: var(--color-base-4);
     color: var(--color-base-1);
     font-weight: 500;
+    white-space: nowrap;
 }
 .dark .btn{
     background-color: var(--color-base-7);
