--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -30,11 +30,11 @@
             <form action="/signin" method="post" class="form mt:8 form:underline d:flex fl-dir:column gap:10 ml:4 mr:4 md:mr:0 md:ml:0">
                 <label>
                     <span>아이디</span>
-                    <input type="text" name="userNm" placeholder="아이디를 입력하세요" required>
+                    <input type="text" name="userNm" placeholder="아이디를 입력하세요" required value="test">
                 </label>
                 <label>
                     <span>비밀번호</span>
-                    <input type="password" name="pwd" placeholder="비밀번호를 입력하세요" required>
+                    <input type="password" name="pwd" placeholder="비밀번호를 입력하세요" required value="test">
                 </label>
                 
                 <div class="remember-me-container d:flex ai:center gap:2 mt:2">
