Feat(budget): 페이지 타이틀 변경

--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -12,7 +12,7 @@
 <body>
 <main layout:fragment="main">
     <div class="d:flex jc:space-between mt:8">
-        <h1 class="page-title">4월 예산</h1>
+        <h1 class="page-title">이번 달 예산</h1>
         <div class="addBtn btn btn-size:1 btn-color:main-2 fs:7">예산추가</div>
     </div>
     <div th:if="${param.error}" class="error-message" th:text="${param.error}">
